# archive-search-app

./: .gitignore  README.md  generate-icons.mjs  index.html  package-lock.json  package.json
.github/workflows/: build.yml  deploy-pages.yml
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Icons.tsx  QueuePage.tsx  ResultsView.tsx  SearchSidebar.tsx  SelectionPanel.tsx  SettingsPage.tsx
src/lib/: archive-api.ts  transliteration.ts
