[package]
name = "archive-search"
version = "0.1.0"
description = "Archive.org Search & Download App"
authors = ["you"]
edition = "2021"

[lib]
name = "archive_search_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
